# async-trait-poc

./: Cargo.toml
embedded-async-sandbox/: Cargo.toml
embedded-async-sandbox/src/: lib.rs  serial.rs
examples/: test.rs  test_serial.rs  test_serial_wrapper.rs  test_spi.rs
src/: lib.rs  serial.rs  spi.rs
