[package]
name = "async-trait-poc"
version = "0.1.0"
authors = ["disasm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "0.4.8"

[dev-dependencies]
tokio = { version = "0.2.13", features = ["macros"] }
